--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,4 +1,10 @@
 include: package:flutter_lints/flutter.yaml
 
+linter:
+
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
+  rules:
+    prefer_single_quotes: true
+    prefer_final_locals: true
+    sort_constructors_first: true
